# rpi_arduino_shim

./: .gitignore  Makefile  README.md  SPI.h
compat/: Wire.h
examples/: CMakeLists.txt  Makefile  lib_test.cpp
src/: Arduino.h
